service-mesh/api-gateway-routes.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-gateway-routes
spec:
  hosts:
    - "*"
  gateways:
    - scaling-app-gateway
  http:
    - route:
        - destination:
            host: client-service
            port:
              number: 8080
